Fixed alignment issue with company logos and names on macOS

--- a/styles.css
+++ b/styles.css
@@ -138,12 +138,15 @@ details {
 }
 
 .logo {
+	display: flex;
 	margin-right: 4px;
+	align-items: center;
 	& a {
 		& img {
 			width: 32px;
 			height: 32px;
 			padding: 2px;
+			margin-right: 4px;
 			vertical-align: middle;
 		}
 	}
